--- a/css/styles.css
+++ b/css/styles.css
@@ -1,58 +1,57 @@
+
 body {
   font-family: "Montserrat";
   text-align: center;
 }
 
-
-
-h1,h2,h3 {
-  font-family: "Montserrat-Black", sans-serif;
-
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Montserrat-Bold";
 }
-.container-fluid {
+
+p {
+  color: #8f8f8f;
+}
+
+/* Headings */
+
+.big-heading {
+  font-family: "Montserrat-Black";
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+.section-heading {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+/* Containers */
+
+.container-fluid{
   padding: 7% 15%;
 }
 
-/*-------------------------headings-------------------*/
-.big-heading{
-  font-size: 3.5rem;
-  line-height: 1.5;
-  font-weight: 900;
+/* Sections */
 
-}
-.section-heading {
-  font-weight: bold;
-  font-size: 3.2rem;
-  line-height: 1.5;
-
-}
-/*-------------------------title-------------------*/
-
-#title {
+.colored-section {
   background-color: #ff4c68;
   color: #fff;
-  text-align: left;
-}
-#title .container-fluid {
-  padding: 3% 15% 7%;
 }
 
-.title-img {
-  width: 60%;
-  transform: rotate(25deg);
-  position: absolute;
-  right: 30%;
+.white-section {
+  background-color: #fff;
 }
 
-.navbar-brand {
-  color: #fff;
-  font-family: "Ubuntu";
-  font-size: 2.5rem;
-  font-weight: bold;
-}
+/* Navigation Bar */
 
 .navbar {
   padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
 }
 
 .nav-item {
@@ -61,59 +60,76 @@ h1,h2,h3 {
 
 .nav-link {
   font-size: 1.2rem;
-  font-family: "Montserrat-light";
+  font-family: "Montserrat-Light";
 }
+
+/* Buttons */
 
 .download-button {
   margin: 5% 3% 5% 0;
-  height: 3rem;
 }
-/*-------------------------feature-------------------*/
+
+/* Title Section */
+
+#title {
+  background-color: #ff4c68;
+  color: #fff;
+  text-align: left;
+}
+
+#title .container-fluid {
+  padding: 3% 15% 7%;
+}
+
+/* Title Image */
+
+.title-image {
+  width: 60%;
+  transform: rotate(25deg);
+  position: absolute;
+  right: 30%;
+}
+
+/* Features Section */
 
 #features {
-  background-color: #fff;
   position: relative;
-  z-index: 1;
 }
 
-.feature-heading{
+.feature-title {
   font-size: 1.5rem;
-  font-weight: bold;
 }
 
-.features-paragraph {
-  color: #8f8f8f;
+.feature-box {
+  padding: 4.5%;
 }
 
-.feature-div {
-  padding: 5%;
-}
-
-i {
-  padding-bottom: 1rem;
+.icon {
   color: #ef8172;
+  margin-bottom: 1rem;
 }
 
-i:hover {
+.icon:hover {
   color: #ff4c68;
 }
-/*-------------------------testimonial-------------------*/
+
+/* Testimonial Section */
 
 #testimonials {
   background-color: #ef8172;
-  color: #fff;
 }
-.testimonial-text{
-  font-weight: bold;
-  font-size: 3.2rem;
+
+.testimonial-text {
+  font-size: 3rem;
   line-height: 1.5;
 }
 
 .testimonial-image {
   width: 10%;
-  margin: 20px;
   border-radius: 100%;
+  margin: 20px;
 }
+
 
 #press {
   background-color: #ef8172;
@@ -125,47 +141,39 @@ i:hover {
   margin: 20px 20px 50px;
 }
 
-.carousel-item {
-
-}
-/*-------------------------Pricing-------------------*/
+/* Pricing Section */
 
 #pricing {
   padding: 100px;
 }
-.card-text{
-  font-size: 1.5rem;
-  font-weight: bold;
 
-}
-.price-text{
-  font-weight: bold;
-  font-size: 3.2rem;
+.price-text {
+  font-size: 3rem;
   line-height: 1.5;
-
 }
-.price-column {
+
+.pricing-column {
   padding: 3% 2%;
 }
-@media (max-width:1024px){
-#title{
-text-align: center;
+
+/* CTA Section */
+
+
+/* Footer Section */
+
+
+.social-icon {
+  margin: 20px 10px;
 }
-  .title-img{
+
+@media (max-width: 1028px) {
+
+  #title {
+    text-align: center;
+  }
+
+  .title-image {
     position: static;
     transform: rotate(0);
-
   }
-}
-#cta{
-  background-color: #ff4c68;
-  color: #fff;
-
-
-}
-
-/* footer Section */
-
-.social-media{
-  margin: 20px 10px;
 }
